<resources>
    <string name="app_name">Memoreeta</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="facebook_app_id">351637611995572</string>
    <string name="fb_login_protocol_scheme">fb351637611995572</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_in">Sign In</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_with_facebook">Sign Up with Facebook</string>
    <string name="have_an_account_sign_in">Have an account? Sign In</string>
    <string name="please_enter_valid_email">Please enter a valid email address</string>
    <string name="please_enter_password">Please enter a valid password</string>
    <string name="please_enter_full_name">Please enter full name</string>
    <string name="please_wait">Please wait</string>
    <string name="fetching_facebook_information">Fetching facebook information</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="life_lesson">Life Lesson</string>
    <string name="about">About</string>
    <string name="gallery">Gallery</string>
    <string name="nick_name">Nick Name</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="account_transfer">Account Transfer</string>
    <string name="delete_account">Delete Account</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="manage_accounts">Manage Accounts</string>
    <string name="please_enter_old_password">Please enter old password</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="passwords_does_not_match">Passwords does not match</string>
    <string name="change_password">Change Password</string>
    <string name="please_enter_address">Please enter address</string>
    <string name="please_enter_life_lesson">Please enter life lesson</string>
    <string name="add_your_memories">Add your memories</string>
    <string name="notifications">Notifications</string>
    <string name="add">Add</string>
    <string name="add_image">Add image</string>
    <string name="edit">Edit</string>
    <string name="family">Family</string>
    <string name="friends">Friends</string>
    <string name="profile">Profile</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="add_memories">Add Memories</string>
    <string name="title">Title</string>
    <string name="description_100_characters_limit">Description (100 characters limit)</string>
    <string name="sub_categories">Sub Categories</string>
    <string name="add_media">Add Media</string>
    <string name="upload">Upload</string>
    <string name="description">Description</string>
    <string name="create_child_profile">Create Child Profile</string>
    <string name="search_name">Search name</string>
    <string name="requests">Requests</string>
    <string name="see_all">See all</string>
    <string name="invite_to_join_memoreeta">Invite to join Memoreeta</string>
    <string name="invite_facebook_friends">Invite Facebook Friends</string>
    <string name="friends_n_family">Friends &amp; Family</string>
    <string name="posts">Posts</string>
    <string name="export">Export</string>
    <string name="family_tree">Family Tree</string>
    <string name="enter_sub_category_name">Enter Sub Category Name</string>
    <string name="success_admin_sub_category">Your suggested sub category has been </string>
    <string name="sign_in_with_facebook">Sign In With Facebook</string>
    <string name="no_internet_connection">No Internet connection!</string>
    <string name="create_an_account">Create An Account</string>
    <string name="press_again_to_exit_app">Press again to exit app.</string>
    <string name="share_in_the_memoreeta">Share in the memoreeta</string>
    <string name="share_outside_the_memoreeta">Share outside the memoreeta</string>
    <string name="full_album">Full Album</string>
    <string name="life_event">Life Event</string>
    <string name="tag_people">Tag People</string>
    <string name="post">Post</string>
    <string name="family_member">Family Member</string>
    <string name="friend">Friend</string>
    <string name="done">Done</string>
    <string name="select_categories">Select Category</string>
    <string name="select_sub_categories">Select Sub Category</string>
    <string name="full_life_album">Full Life Album</string>
    <string name="photos">Photos</string>
    <string name="videos">Videos</string>
    <string name="all_family">All Family</string>
    <string name="select_family_members">Select Family Members</string>
    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
    <string name="request_password">Request Password</string>
    <string name="write_comment_here">Write comment here</string>
    <string name="next">Next</string>
    <string name="post_memory">Post Your Memories</string>
    <string name="add_new_memory">Add New Memory</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="validating_user">Validating user</string>
    <string name="loading">Loading</string>
    <string name="please_enter_child_name">Please enter child name</string>
    <string name="please_enter_nick_name">Please enter nick name</string>
    <string name="please_select_dob">Please enter date of birth</string>
    <string name="unfriend">Unfriend</string>
    <string name="clear"><u>Clear</u></string>

</resources>
