<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data></data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewRequests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundGrey"
                android:padding="@dimen/margin10dp"
                android:text="@string/requests"
                android:textColor="@color/greyDark"
                android:textSize="@dimen/text18sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewRequests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundGrey"
                android:padding="@dimen/margin10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/friends"
                    android:textColor="@color/greyDark"
                    android:textSize="@dimen/text18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/see_all"
                    android:textColor="@color/buttonBlue"
                    android:textSize="@dimen/text18sp" />

            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewFriends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundGrey"
                android:padding="@dimen/margin10dp"
                android:text="@string/invite_to_join_memoreeta"
                android:textColor="@color/greyDark"
                android:textSize="@dimen/text18sp" />

            <RelativeLayout
                android:id="@+id/relativeLayoutInvite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin10dp">

                <ImageView
                    android:id="@+id/imageViewFacebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_facebook_invite"
                    android:layout_centerVertical="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin15dp"
                    android:layout_toRightOf="@+id/imageViewFacebook"
                    android:padding="@dimen/margin10dp"
                    android:text="@string/invite_facebook_friends"
                    android:textColor="@color/greyDark"
                    android:textSize="@dimen/text19sp" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</layout>