<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="binder"
            type="ggn.home.help.features.signUp.SignUpBinder" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/background" />

            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginBottom="@dimen/margin15dp"
                android:layout_marginTop="@dimen/margin40dp"
                android:src="@drawable/logo" />

            <LinearLayout
                android:id="@+id/linearLayoutParent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="@dimen/margin15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/create_an_account"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text18sp" />

                <EditText
                    android:id="@+id/editTextFullName"
                    style="@style/editTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin15dp"
                    android:background="@color/whiteTransparent"
                    android:hint="@string/full_name"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/editTextEmail"
                    style="@style/editTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin3dp"
                    android:background="@color/whiteTransparent"
                    android:hint="@string/email_address"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/editTextPassword"
                    style="@style/editTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin3dp"
                    android:background="@color/whiteTransparent"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />


                <Button
                    android:id="@+id/buttonSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin10dp"
                    android:background="@drawable/round_bordered_button_blue"
                    android:text="@string/sign_up"
                    android:onClick="@{binder::signUpClicked}"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text16sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin20dp"
                    android:background="@null"
                    android:text="Or"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text15sp" />

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/loginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/buttonFacebook"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin20dp"
                    android:background="@drawable/rounded_fb_blue"
                    android:drawableLeft="@drawable/ic_if_facebook"
                    android:padding="@dimen/margin10dp"
                    android:text="@string/sign_up_with_facebook"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text16sp" />

                <TextView
                    android:id="@+id/textViewSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin20dp"
                    android:background="@null"
                    android:onClick="signIn"
                    android:text="@string/have_an_account_sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text15sp" />

            </LinearLayout>
        </FrameLayout>
    </ScrollView>
</layout>