<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="binder"
            type="ggn.home.help.features.signIn.SignInBinder" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/background" />

            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center|top"
                android:layout_marginBottom="@dimen/margin15dp"
                android:layout_marginTop="@dimen/margin40dp"
                android:src="@drawable/logo" />


            <LinearLayout
                android:id="@+id/linearLayoutParent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerVertical="true"
                android:layout_gravity="bottom"
                android:layout_margin="@dimen/margin15dp"
                android:orientation="vertical">

                <ggn.home.help.utils.widgets.CustomEditText
                    android:id="@+id/editTextEmail"
                    style="@style/editTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/whiteTransparent"
                    android:hint="@string/email_address"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:text="@={binder.email}" />

                <ggn.home.help.utils.widgets.CustomEditText
                    android:id="@+id/editTextPassword"
                    style="@style/editTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin3dp"
                    android:background="@color/whiteTransparent"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:text="@={binder.password}" />

                <ggn.home.help.utils.widgets.CustomCheckBox
                    android:id="@+id/checkBoxRememberMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin10dp"
                    android:textColor="@color/textBrown"
                    android:text="@string/remember_me"
                    android:padding="@dimen/margin5dp"
                    android:checked="true"
                    android:button="@drawable/checkbox"
                    android:textSize="@dimen/text14sp" />

                <ggn.home.help.utils.widgets.CustomButton
                    android:id="@+id/buttonSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin10dp"
                    android:background="@drawable/round_bordered_button_blue"
                    android:onClick="@{binder::signInClicked}"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text14sp" />


                <ggn.home.help.utils.widgets.CustomButton
                    android:id="@+id/buttonForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin10dp"
                    android:background="@null"
                    android:text="@string/forgot_password"
                    android:textAllCaps="false"
                    android:textColor="@color/textBrown"
                    android:textSize="@dimen/text15sp" />

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/loginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <ggn.home.help.utils.widgets.CustomButton
                    android:id="@+id/buttonFacebook"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin20dp"
                    android:background="@drawable/rounded_fb_blue"
                    android:drawableLeft="@drawable/ic_if_facebook"
                    android:padding="@dimen/margin10dp"
                    android:text="@string/sign_in_with_facebook"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text14sp" />

                <ggn.home.help.utils.widgets.CustomTextView
                    android:id="@+id/textViewSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin20dp"
                    android:background="@null"
                    android:onClick="signUp"
                    android:text="@string/don_t_have_an_account_sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text14sp" />

            </LinearLayout>

        </FrameLayout>


    </ScrollView>
</layout>