<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data></data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageViewBackground"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:scaleType="centerCrop" />

                <ImageView
                    android:id="@+id/imageViewProfilePic"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerInParent="true"
                    android:scaleType="centerCrop" />

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin10dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    style="@style/TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editTextName"
                        style="@style/editTextThemeSingleLine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:padding="@dimen/margin15dp"
                        android:textColor="@color/black" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    style="@style/TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editTextNickName"
                        style="@style/editTextThemeSingleLine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nick_name"
                        android:padding="@dimen/margin15dp"
                        android:textColor="@color/black" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    style="@style/TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editTextDateOfBirth"

                        style="@style/editTextThemeSingleLine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/date_of_birth"
                        android:padding="@dimen/margin15dp"
                        android:textColor="@color/black" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editTextGender"

                        style="@style/editTextThemeSingleLine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/gender"
                        android:padding="@dimen/margin15dp"
                        android:textColor="@color/black" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    style="@style/TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editTextAddress"
                        style="@style/editTextThemeSingleLine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address"
                        android:padding="@dimen/margin15dp"
                        android:textColor="@color/black" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editTextLifeLesson"

                        style="@style/editTextThemeSingleLine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/life_lesson"
                        android:padding="@dimen/margin15dp"
                        android:textColor="@color/black" />

                </android.support.design.widget.TextInputLayout>

                <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin10dp" />

                <Button
                    android:id="@+id/buttonSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin10dp"
                    android:background="@drawable/round_bordered_button_blue"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text15sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>