<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data></data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin5dp" />

            <android.support.design.widget.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextName"
                    style="@style/editTextThemeSingleLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:enabled="false"
                    android:padding="@dimen/margin15dp"
                    android:textColor="@color/black" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextDateOfBirth"
                    style="@style/editTextThemeSingleLine"
                    android:layout_width="match_parent"
                    android:enabled="false"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_of_birth"
                    android:padding="@dimen/margin15dp"
                    android:textColor="@color/black" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextGender"
                    style="@style/editTextThemeSingleLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/gender"
                    android:padding="@dimen/margin15dp"
                    android:textColor="@color/black" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:enabled="false"
                    style="@style/editTextThemeSingleLine"
                    android:padding="@dimen/margin15dp"
                    android:textColor="@color/black" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextLifeLesson"
                    android:enabled="false"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:maxLines="6"
                    android:minLines="3"
                    android:scrollbars="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/life_lesson"
                    style="@style/editTextThemeSingleLine"
                    android:padding="@dimen/margin15dp"
                    android:textColor="@color/black" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>
</layout>